<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".UI.AddReminderActivity">

    <TextView
        android:id="@+id/medicationNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/medicine"
        android:textColor="@color/black"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/medicationNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/medicine_name"
        android:inputType="textPersonName"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/startDateInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/dateFormat"
            android:inputType="none"
            android:focusable="false"/>

        <EditText
            android:id="@+id/endDateInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/dateFormat"
            android:inputType="none"
            android:focusable="false"/>

    </LinearLayout>


    <Button
        android:id="@+id/timeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="45dp"
        android:text="@string/set_time_here"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/your_time_displays_here"
        android:textSize="30sp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="45dp"
        android:text="@string/saveButton"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/cancelButton"
        android:textColor="@color/white" />


</LinearLayout>